src/index.css
@import 'tailwindcss';

html {
    height: 100%;
}

@theme {
    --color-black: #000000;
    --color-white: #ffffff;
    --color-gray: #b9b9b9;
    --color-dark-gray: #424242;
    --color-primary: #4965cd;
    --color-secondary: #e2eaff;
    --color-background: #f8f8f8;
    --color-border: #e8e8e8;
    --color-text-border: #e0e0e0;
    --color-text-primary: #333333;
    --color-toast-message: #ffffffde;
    --color-toast-success: #5cb85c;
    --color-toast-error: #ff2c2c;

    --font-primary: 'Roboto', sans-serif;
}

* {
    @apply font-primary;
}

body {
    width: 100vw;
    height: 100vh;
    color: var(--color-text-primary);
    overflow-x: hidden;
}

@media (min-width: 780px) {
    body {
        overflow: hidden;
    }
}

#root {
    width: 100%;
    height: 100%;
}

input::placeholder {
    user-select: none;
}

.MuiPickersSectionList-root {
    padding: 0 !important;
    font-size: 12px !important;
}

